--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eth-checksum": "^1.0.1",
     "nanoassert": "^2.0.0",
     "secp256k1-native": "^1.1.1",
-    "sha3-wasm": "0.0.7",
+    "sha3-wasm": "^1.0.0",
     "sodium-native": "^3.2.0"
   },
   "devDependencies": {
